manifests/ghost-example/ghost.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ghost
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  strategy: {}
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - image: ghost
        name: ghost
        ports:
        - containerPort: 2368
