manifests/ghost-example/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghost
  name: ghost
spec:
  externalTrafficPolicy: Cluster
  ports:
  - port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    app: ghost
  type: NodePort
