manifests/ghost-example/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  annotations:
     cloud.google.com/service-settings: |
       {
           "*": {
              "timeoutSec": 60
           }
       }
spec:
  backend:
    serviceName: ghost
    servicePort: 2368
